@@ -315,6 +315,12 @@
       <role name="Member" />
     </permission>
 
+    <permission name="plone.restapi: Access Plone user information" acquire="True">
+      <role name="Manager" />
+      <role name="Member" />
+      <role name="Reader" />
+    </permission>
+
   </permissions>
 
 </rolemap>
